# saliency_check

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
tests/: test_validator.py
tests/assets/: a.txt  b.txt
validator/: __init__.py  main.py
