[project]
name = "saliency_check"
version = "0.0.0"
description = "Checks that the summary covers the list of topics present in the document."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "rstr",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]